--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ input[type = submit] {
     cursor: pointer;
 }
 
-#contactForm, #commentForm1 {
+#contactForm, #commentForm1, #commentForm2, #commentForm3, #commentForm4, #commentForm5 {
 	width: 25%;
     border-radius: 5px;
     background-color: #f2f2f2;
